// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WelcomeDialog component Renders correctly When Title and rich text content are present 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="false"
  >
    <div
      role="presentation"
      style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
    >
      <div
        aria-hidden="true"
        style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
      />
      <div
        data-test="sentinelStart"
        tabindex="0"
      />
      <div
        class="Dialog Dialog--bg-white Dialog--width-md WelcomeDialog"
        style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        tabindex="-1"
      >
        <div
          class="header"
        >
          <h3
            class="MuiTypography-root title title Typography Typography--underline MuiTypography-h3"
          >
            Dialog Title
          </h3>
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-11 iconButtonStyles-medium-17 iconButtonStyles-text-13 iconButton"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="content"
        >
          <div
            class="contentArea"
          >
            <div
              class="brands"
              data-testid="brandsContainer"
            />
            <div
              class="body body--with-brand"
            >
              <div
                class="RichText"
              >
                <p
                  class="MuiTypography-root Typography MuiTypography-body1 MuiTypography-gutterBottom"
                >
                  test rich text
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="actions"
        >
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-contained buttonStyles-contained-3 actionButton MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label buttonStyles-label-4"
            >
              MC: dialog.close
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        data-test="sentinelEnd"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`WelcomeDialog component Renders correctly When Title rich text and icons are present 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="false"
  >
    <div
      role="presentation"
      style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
    >
      <div
        aria-hidden="true"
        style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
      />
      <div
        data-test="sentinelStart"
        tabindex="0"
      />
      <div
        class="Dialog Dialog--bg-white Dialog--width-md WelcomeDialog"
        style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        tabindex="-1"
      >
        <div
          class="header"
        >
          <h3
            class="MuiTypography-root title title Typography Typography--underline MuiTypography-h3"
          >
            Dialog Title
          </h3>
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-30 iconButtonStyles-medium-36 iconButtonStyles-text-32 iconButton"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="content"
        >
          <div
            class="contentArea"
          >
            <div
              class="brands"
              data-testid="brandsContainer"
            >
              <svg
                class="BrandLogo brand"
              />
              <svg
                class="BrandLogo brand"
              />
              <svg
                class="BrandLogo brand"
              />
            </div>
            <div
              class="body body--with-brand"
            >
              <div
                class="RichText"
              >
                <p
                  class="MuiTypography-root Typography MuiTypography-body1 MuiTypography-gutterBottom"
                >
                  test rich text
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="actions"
        >
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-20 MuiButton-contained buttonStyles-contained-22 actionButton MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label buttonStyles-label-23"
            >
              MC: dialog.close
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        data-test="sentinelEnd"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`WelcomeDialog component Renders correctly when Dialog is Closed 1`] = `
<body
  style=""
>
  <div />
</body>
`;

exports[`WelcomeDialog component Renders null when Body not present 1`] = `
<body>
  <div />
</body>
`;

exports[`WelcomeDialog component Renders null when Title not present 1`] = `
<body>
  <div />
</body>
`;
